# Maze-Python-AP

./: Clock.py  Game.py  Player.py  hands-on pygame.ipynb  maze.txt  pyproject.toml
.ipynb_checkpoints/: hands-on pygame-checkpoint.ipynb  pyproject-checkpoint.toml
data/: haie-carrée.avif
src/projet_maze/: __init__.py  const.py  draw-maze-solution.py  draw_maze.py  draw_maze_solution.py  draw_zone.py  main.py  maze.py  maze_detect.py  maze_gen.py  maze_solve.py
